--- a/styles.scss
+++ b/styles.scss
@@ -150,7 +150,7 @@ body {
       width: 50%;
       /* z-index: -2; */
       position: relative;
-      /* overflow: hidden; */
+      overflow: hidden;
       #avatar {
         max-height: 600px;
       }
@@ -431,6 +431,7 @@ body {
     }
     #section1 {
       #avatarContainer {
+        width: 100%;
         padding: 0;
         margin-top: 20px;
         #avatar,
